--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="menu">
           
            <ul>
-            <li><a href="#">Quem somos</a> </li>
+            <li><a href="/QuemSomos/Index.html">Quem somos</a> </li>
             <li><a href="#">Unidade</a> </li>
             <li><a href="#">Localização</a></li>
             <li><a href="#">Contato</a></li> 
