terminado quem somos

--- a/QuemSomos/Index.html
+++ b/QuemSomos/Index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="" alt="">
+    <img src="/imagens/Quais aspectos influenciam no valor de um funeral_ Entenda!.jfif" alt="">
     <div>
         <h3>Quem Somos?</h3>
     </div>
@@ -31,7 +31,7 @@
     <div>Desde a nossa fundação, temos nos comprometido a oferecer um serviço excepcional, baseado em valores de
         integridade, respeito e empatia. Ao longo dos anos, construímos uma reputação sólida na comunidade, sendo
         reconhecidos pela nossa dedicação e profissionalismo.</div><br>
-    <img src="" alt="">
+    <img src="/imagens/Cinco fotos de funerales para ver en el trabajo e imaginar que son del____.jfif" alt="">
     <div>
         <h3>Nossa Missão</h3>
     </div>
@@ -56,7 +56,7 @@
         </ul>
     </div><br>
     <div>
-        <img src="" alt="">
+        <img src="/imagens/Categorias de cemitério_ você sabe quais são_ Descubra!.jfif" alt="">
         <h2>Nossa Equipe</h2>
     </div>
     <div>Contamos com uma equipe de profissionais altamente capacitados e dedicados, que estão sempre prontos para
