--- a/QuemSomos/Index.html
+++ b/QuemSomos/Index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Style.css/Style.css2/Style.css">
     <title>Quem Somos</title>
 </head>
 
 <body>
-    <img src="" alt="">
-    <div>
+    
+    <img src="/imagens/Quais aspectos influenciam no valor de um funeral_ Entenda!.jfif" alt="">
+    <div id="Quemsomos">
         <h3>Quem Somos?</h3>
     </div>
-    <div>
+    <div id="texto1">
         <P>A Funerária Luz do Caminho é uma empresa dedicada a oferecer serviços funerários de alta qualidade, com
             respeito,
             dignidade e compaixão. Fundada com o propósito de apoiar famílias em momentos difíceis, nossa missão é
@@ -20,10 +23,12 @@
             um atendimento humanizado e personalizado, garantindo que cada detalhe seja tratado com o máximo cuidado.
         </P>
     </div>
-    <iframe width="488" height="320" src="https://www.youtube.com/embed/lxbro_JvtjE"
+    <div id="vídeo">
+        <iframe width="488" height="320" src="https://www.youtube.com/embed/lxbro_JvtjE"
         title="Grupo Memorial - Vídeo Institucional" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
     <div>
         <h3>Nossa História</h3>
@@ -31,7 +36,7 @@
     <div>Desde a nossa fundação, temos nos comprometido a oferecer um serviço excepcional, baseado em valores de
         integridade, respeito e empatia. Ao longo dos anos, construímos uma reputação sólida na comunidade, sendo
         reconhecidos pela nossa dedicação e profissionalismo.</div><br>
-    <img src="" alt="">
+    <img src="/imagens/Cinco fotos de funerales para ver en el trabajo e imaginar que son del____.jfif" alt="">
     <div>
         <h3>Nossa Missão</h3>
     </div>
@@ -56,7 +61,7 @@
         </ul>
     </div><br>
     <div>
-        <img src="" alt="">
+        <img src="/imagens/Categorias de cemitério_ você sabe quais são_ Descubra!.jfif" alt="">
         <h2>Nossa Equipe</h2>
     </div>
     <div>Contamos com uma equipe de profissionais altamente capacitados e dedicados, que estão sempre prontos para
