--- a/QuemSomos/Index.html
+++ b/QuemSomos/Index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    
+
     <img src="/imagens/Quais aspectos influenciam no valor de um funeral_ Entenda!.jfif" alt="">
-    <div id="Quemsomos">
+    <div class="titulos">
         <h3>Quem Somos?</h3>
     </div>
-    <div id="texto1">
+    <div class="texto">
         <P>A Funerária Luz do Caminho é uma empresa dedicada a oferecer serviços funerários de alta qualidade, com
             respeito,
             dignidade e compaixão. Fundada com o propósito de apoiar famílias em momentos difíceis, nossa missão é
@@ -25,30 +25,32 @@
     </div>
     <div id="vídeo">
         <iframe width="488" height="320" src="https://www.youtube.com/embed/lxbro_JvtjE"
-        title="Grupo Memorial - Vídeo Institucional" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            title="Grupo Memorial - Vídeo Institucional" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
-    <div>
+    <div class="titulos">
         <h3>Nossa História</h3>
     </div>
-    <div>Desde a nossa fundação, temos nos comprometido a oferecer um serviço excepcional, baseado em valores de
+    <div class="texto">Desde a nossa fundação, temos nos comprometido a oferecer um serviço excepcional, baseado em
+        valores de
         integridade, respeito e empatia. Ao longo dos anos, construímos uma reputação sólida na comunidade, sendo
         reconhecidos pela nossa dedicação e profissionalismo.</div><br>
     <img src="/imagens/Cinco fotos de funerales para ver en el trabajo e imaginar que son del____.jfif" alt="">
-    <div>
+    <div class="titulos">
         <h3>Nossa Missão</h3>
     </div>
-    <div> Nossa missão é proporcionar um serviço funerário que honre a memória dos entes queridos de maneira digna e
+    <div class="texto"> Nossa missão é proporcionar um serviço funerário que honre a memória dos entes queridos de
+        maneira digna e
         serena.
         Acreditamos que cada vida é única e merece ser celebrada com respeito e carinho. Por isso, nos esforçamos para
         atender às necessidades específicas de cada família, oferecendo soluções personalizadas e um suporte contínuo.
     </div><br>
-    <div>
+    <div class="titulos">
         <h2>Nossos Valores</h2>
     </div><br>
-    <div>
+    <div class="texto">
         <ul>
             <li><strong>Respeito:</strong>Tratamos cada família com a dignidade e o respeito que merecem, honrando as
                 tradições culturais e religiosas de cada um.</li>
@@ -61,14 +63,17 @@
         </ul>
     </div><br>
     <div>
-        <img src="/imagens/Categorias de cemitério_ você sabe quais são_ Descubra!.jfif" alt="">
+        <img src="/imagens/Categorias de cemitério_ você sabe quais são_ Descubra!.jfif" alt=""><br>
+    </div>
+    <div class="titulos">
         <h2>Nossa Equipe</h2>
     </div>
-    <div>Contamos com uma equipe de profissionais altamente capacitados e dedicados, que estão sempre prontos para
+    <div class="texto">Contamos com uma equipe de profissionais altamente capacitados e dedicados, que estão sempre prontos para
         oferecer
         suporte e assistência em todos os momentos. Nossa equipe é treinada para lidar com todas as situações com
         sensibilidade e profissionalismo, garantindo que cada detalhe seja tratado com o máximo cuidado.</div>
     <h2>Por Que Escolher a Funerária Luz do Caminho?</h2>
+    <div class="texto">
     <ul>
         <li><strong>Atendimento Personalizado</strong>Adaptamos nossos serviços às necessidades específicas de cada
             família, oferecendo soluções personalizadas e um suporte contínuo.</li>
@@ -76,8 +81,8 @@
             assistência imediata em qualquer momento de necessidade.</li>
         <li><strong>Compromisso com a Qualidade</strong>Nos dedicamos a oferecer um serviço de alta qualidade,
             garantindo que cada detalhe seja tratado com o máximo cuidado e respeito.</li>
-    </ul>
-    <div>Na Funerária Luz do Caminho, estamos aqui para oferecer suporte e assistência em todos os momentos, ajudando as
+    </ul></div>
+    <div class="texto">Na Funerária Luz do Caminho, estamos aqui para oferecer suporte e assistência em todos os momentos, ajudando as
         famílias a honrar a memória de seus entes queridos de maneira digna e serena. Se precisar de mais informações ou
         de assistência, não hesite em entrar em contato conosco. Estamos sempre prontos para ajudar.</div>
 
