--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <nav class="menu">
 
                 <ul>
+                    <li><img src="imagens/flor-de-lotus (1).png" alt=""> <div class="lotus">Luz do Caminho </div></li>
                     <li><a href="/QuemSomos/Index.html">Quem somos</a> </li>
                     <li><a href="#">Unidade</a> </li>
                     <li><a href="#">Localização</a></li>
