--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <nav class="menu">
 
                 <ul>
-                    <li><img src="imagens/flor-de-lotus (1).png" alt=""> <div class="lotus">Luz do Caminho </div></li>
+                    <li><img src="imagens/flor-de-lotus (1).png" alt="">
+                        <div class="lotus">Luz do Caminho </div>
+                    </li>
                     <li><a href="/QuemSomos/Index.html">Quem somos</a> </li>
                     <li><a href="#">Unidade</a> </li>
                     <li><a href="#">Localização</a></li>
@@ -55,7 +57,8 @@
                     </li><br>
                     <li><strong>Trasladações</strong>
                         <div>Realizamos o transporte de restos mortais para diferentes locais, tanto dentro do país
-                            quanto internacionalmente. Nossa equipe cuida de toda a documentação necessária, garantindo um
+                            quanto internacionalmente. Nossa equipe cuida de toda a documentação necessária, garantindo
+                            um
                             processo tranquilo e sem complicações.</div>
                     </li><br>
                     <li><strong>Tanatopraxia e Tanatoestética</strong><br>Utilizamos técnicas avançadas de tanatopraxia
@@ -63,7 +66,8 @@
                         para a despedida.
                     </li><br>
                     <li><strong>Flores e Coroas</strong><br>Disponibilizamos uma ampla variedade de arranjos florais,
-                        coroas e palmas para homenagear o ente querido, ajudando a criar um ambiente de respeito e carinho.
+                        coroas e palmas para homenagear o ente querido, ajudando a criar um ambiente de respeito e
+                        carinho.
                     </li>
                     <br>
                     <li><strong>Apoio Administrativo</strong>
@@ -73,7 +77,8 @@
                     </li><br>
                     <li><strong>Horários de Funcionamento</strong>
                         <div>Estamos disponíveis 24 horas por dia, 7 dias por semana, garantindo suporte contínuo e
-                            imediato em qualquer momento de necessidade. Nossa equipe está sempre pronta para ajudar, oferecendo
+                            imediato em qualquer momento de necessidade. Nossa equipe está sempre pronta para ajudar,
+                            oferecendo
                             atendimento personalizado e compassivo.
                         </div>
                     </li>
@@ -100,27 +105,37 @@
                 </ol><br>
             </div>
 
-            <div id="serviçodeatendimento"> <h3>Serviço de Atendimento Personalizado</h3><br> 
+            <div id="serviçodeatendimento">
+                <h3>Serviço de Atendimento Personalizado</h3><br>
                 Na Funerária Luz do Caminho, oferecemos um <strong>Serviço de Atendimento Personalizado</strong> para
                 garantir
                 que cada detalhe do funeral seja tratado com o máximo cuidado e respeito, de acordo com as necessidades
                 e
                 desejos específicos de cada família. <br>
-            
+
                 <h4>Como Funciona:</h4>
                 <ol>
                     <li><strong>Consulta Inicial:</strong> Assim que a família entra em contato conosco, agendamos uma
-                        consulta inicial para entender suas necessidades e preferências. Essa consulta pode ser realizada
+                        consulta inicial para entender suas necessidades e preferências. Essa consulta pode ser
+                        realizada
                         presencialmente, por telefone ou online, conforme a conveniência da família.
                     </li>
-                    <li><strong>Planejamento Detalhado:</strong> Trabalhamos em conjunto com a família para planejar todos os aspectos do funeral, desde a escolha do tipo de sepultamento (sepultura, jazigo ou cremação) até a organização do velório e da cerimônia de despedida. Respeitamos as tradições culturais e religiosas de cada família, garantindo que todos os detalhes sejam personalizados.</li>
-                    
-                    <li><strong>Coordenação de Serviços:</strong> Nossa equipe coordena todos os serviços necessários, incluindo a preparação do corpo, a decoração do local do velório, a contratação de músicos ou oradores, e a organização de transporte para os familiares e amigos.</li>
+                    <li><strong>Planejamento Detalhado:</strong> Trabalhamos em conjunto com a família para planejar
+                        todos os aspectos do funeral, desde a escolha do tipo de sepultamento (sepultura, jazigo ou
+                        cremação) até a organização do velório e da cerimônia de despedida. Respeitamos as tradições
+                        culturais e religiosas de cada família, garantindo que todos os detalhes sejam personalizados.
+                    </li>
+
+                    <li><strong>Coordenação de Serviços:</strong> Nossa equipe coordena todos os serviços necessários,
+                        incluindo a preparação do corpo, a decoração do local do velório, a contratação de músicos ou
+                        oradores, e a organização de transporte para os familiares e amigos.</li>
                     <li><strong>Acompanhamento Contínuo:</strong>
-                        Durante todo o processo, oferecemos suporte contínuo família, respondendo a quaisquer dúvidas e garantindo que tudo ocorra conforme planejado. Estamos
+                        Durante todo o processo, oferecemos suporte contínuo família, respondendo a quaisquer dúvidas e
+                        garantindo que tudo ocorra conforme planejado. Estamos
                         disponíveis 24 horas por dia para prestar assistência imediata.
                     </li>
-                    <li><strong>Suporte Pós-Funeral:</strong> Após a cerimônia, continuamos a oferecer suporte à família,
+                    <li><strong>Suporte Pós-Funeral:</strong> Após a cerimônia, continuamos a oferecer suporte à
+                        família,
                         ajudando com questões administrativas e oferecendo serviços de acompanhamento, como apoio
                         psicológico e assistência na obtenção de documentos.
                     </li>
@@ -147,21 +162,25 @@
 
         <br>
         <strong>Fale conosco:</strong>
-        <div>Endereço: Rua da Paz, 123, Centro, Santos, SP, Brasil <br>
-            Telefone: (13) 1234-5678 <br>
-            Email: contato@luzdocaminho.com.br <br>
-            Horário de Atendimento: 24 horas por dia, 7 dias por semana <br>
-            <strong>Redes Sociais</strong>: <br>
-            <a href="">Facebook</a>|<a href="">Instagram </a>
+        <div class="sessao1">
+            <section>Endereço: Rua da Paz, 123, Centro, Santos, SP, Brasil <br>
+                Telefone: (13) 1234-5678 <br>
+                Email: contato@luzdocaminho.com.br <br>
+                Horário de Atendimento: 24 horas por dia, 7 dias por semana <br>
+                <strong>Redes Sociais</strong>: <br>
+                <a href="">Facebook</a>|<a href="">Instagram </a>
+            </section>
         </div> <br>
-        <div><strong>lInstitucional:</strong> <br>
-            Quem somosbr <br>
-            Unidade <br>
-            Localização <br>
-            Perguntas frequentes <br>
-            Aviso de Privacidade <br>
-            Política de pagamento <br>
-            Trabalhe conosco <br>
+        <div class="sessao2">
+            <section><strong>lInstitucional:</strong> <br>
+                <a href="/QuemSomos/Index.html">Quem somos</a><br>
+                <a href="">Unidade</a><br>
+                <a href="">Localização</a> <br>
+                <a href="">Aviso de Privacidade</a> <br>
+                <a href="">Perguntas frequentes </a><br>
+                <a href="">Política de pagamento</a> <br>
+                <a href="">Trabalhe conosco </a><br>
+            </section>
         </div> <br>
         <div>
             <footer>
