--- a/index.html
+++ b/index.html
@@ -35,128 +35,144 @@
             </div>
             <br>
 
-            <div id="introducao">
-                <h2> Bem-vindo à Funerária Luz do Caminho</h2><br>
-                Na Funerária Luz do Caminho, entendemos a importância de prestar um serviço digno e respeitoso em
-                momentos
-                de perda. Nosso compromisso é oferecer suporte completo e compassivo às famílias, ajudando a honrar a
-                memória de seus entes queridos de maneira serena e significativa.
-            </div> <br>
+            <section>
+                <h2 class="titulo1">Bem-vindo à Funerária Luz do Caminho</h2>
+                <p class="texto1">Na Funerária Luz do Caminho, entendemos a importância de prestar um serviço digno e
+                    respeitoso em
+                    momentos
+                    de perda. Nosso compromisso é oferecer suporte completo e compassivo às famílias, ajudando a honrar
+                    a
+                    memória de seus entes queridos de maneira serena e significativa.</p>
 
-            <div id="nossosserviços">
-                <h3>Nossos Serviços</h3>
-            </div>
 
-            <ul>
-                <div class="serviços">
 
-                    <li><strong>Organização de Funerais</strong> <br> Cuidamos de todos os detalhes do funeral, desde a
+                <div>
+                    <h2 class="titulo2">Nossos Serviços</h2>
+                </div>
+
+                <div class="servicos">
+                    <strong>Organização de Funerais:</strong> Cuidamos de todos os detalhes do funeral, desde a
                         preparação do corpo até a cerimônia de despedida. Oferecemos diferentes opções de sepultamento,
                         incluindo sepultura, jazigo e cremação, além de organizar velórios conforme as preferências da
                         família.
-                    </li><br>
-                    <li><strong>Trasladações</strong>
-                        <div>Realizamos o transporte de restos mortais para diferentes locais, tanto dentro do país
-                            quanto internacionalmente. Nossa equipe cuida de toda a documentação necessária, garantindo
-                            um
-                            processo tranquilo e sem complicações.</div>
-                    </li><br>
-                    <li><strong>Tanatopraxia e Tanatoestética</strong><br>Utilizamos técnicas avançadas de tanatopraxia
+                    </div>
+                    <div class="servicos2">
+                        <strong>Trasladações:</strong> Realizamos o transporte de restos mortais para diferentes locais, tanto dentro do
+                        país
+                        quanto internacionalmente. Nossa equipe cuida de toda a documentação necessária, garantindo um
+                        processo tranquilo e sem complicações
+                    </div>.
+                    <div class="servicos3"> 
+                        <strong>Tanatopraxia e Tanatoestética:</strong> Utilizamos técnicas avançadas de tanatopraxia
                         e tanatoestética para conservar e preparar o corpo, proporcionando uma aparência serena e digna
                         para a despedida.
-                    </li><br>
-                    <li><strong>Flores e Coroas</strong><br>Disponibilizamos uma ampla variedade de arranjos florais,
+                    </div>
+                    <div class="servicos4">
+                        <strong>Flores e Coroas</strong>Disponibilizamos uma ampla variedade de arranjos florais,
                         coroas e palmas para homenagear o ente querido, ajudando a criar um ambiente de respeito e
                         carinho.
-                    </li>
-                    <br>
-                    <li><strong>Apoio Administrativo</strong>
-                        <div>Oferecemos assistência na obtenção de documentos e no cumprimento de todas as formalidades
-                            legaisn relacionadas ao falecimento, aliviando a carga administrativa das famílias.
-                        </div>
-                    </li><br>
-                    <li><strong>Horários de Funcionamento</strong>
-                        <div>Estamos disponíveis 24 horas por dia, 7 dias por semana, garantindo suporte contínuo e
-                            imediato em qualquer momento de necessidade. Nossa equipe está sempre pronta para ajudar,
-                            oferecendo
-                            atendimento personalizado e compassivo.
-                        </div>
-                    </li>
+                    </div>
+
+                    <div class="servicos5">
+                        <strong>Apoio Administrativo</strong>
+                        Oferecemos assistência na obtenção de documentos e no cumprimento de todas as formalidades
+                        legaisn relacionadas ao falecimento, aliviando a carga administrativa das famílias.
+                    </div>
+                    <div class="servicos6">
+                        <strong>Horários de Funcionamento</strong>
+                        Estamos disponíveis 24 horas por dia, 7 dias por semana, garantindo suporte contínuo e
+                        imediato em qualquer momento de necessidade. Nossa equipe está sempre pronta para ajudar,
+                        oferecendo
+                        atendimento personalizado e compassivo.
+                    </div>
+                
+
+
+                <div id="florbrancas"><img class="flor" src="./imagens/floresbrancas.jfif" alt=""></div>
+
+                <div id="Comofunciona">
+                    <h3 class="titulo3">Como Funciona</h3><br>
                 </div>
-            </ul><br>
+                <div class="funcionanmento">
+                    <ol>
+                        <li><strong>Contato Inicial:</strong>A família entra em contato conosco, e oferecemos uma
+                            consulta
+                            inicial
+                            para entender as necessidades e desejos específicos.</li><br>
+                        <li><strong>Planejamento:</strong>Juntamente com a família, planejamos todos os detalhes do
+                            funeral,
+                            respeitando as tradições e preferências.</li><br>
+                        <li><strong>Execução:</strong>Nossa equipe cuida de todos os preparativos e da execução do
+                            funeral,
+                            proporcionando um serviço profissional e compassivo.</li><br>
+                        <li><strong>Acompanhamento:</strong>Após o funeral, continuamos a oferecer suporte à família,
+                            ajudando com
+                            questões administrativas e oferecendo serviços de acompanhamento.</li>
+                    </ol><br>
+                </div>
 
-            <div id="florbrancas"><img class="flor" src="./imagens/floresbrancas.jfif" alt=""></div>
+                <div id="serviçodeatendimento">
+                    <h3>Serviço de Atendimento Personalizado</h3><br>
+                    Na Funerária Luz do Caminho, oferecemos um <strong>Serviço de Atendimento Personalizado</strong>
+                    para
+                    garantir
+                    que cada detalhe do funeral seja tratado com o máximo cuidado e respeito, de acordo com as
+                    necessidades
+                    e
+                    desejos específicos de cada família. <br>
 
-            <div id="Comofunciona">
-                <h3>Como Funciona</h3><br>
-            </div>
-            <div class="funcionanmento">
-                <ol>
-                    <li><strong>Contato Inicial:</strong>A família entra em contato conosco, e oferecemos uma consulta
-                        inicial
-                        para entender as necessidades e desejos específicos.</li><br>
-                    <li><strong>Planejamento:</strong>Juntamente com a família, planejamos todos os detalhes do funeral,
-                        respeitando as tradições e preferências.</li><br>
-                    <li><strong>Execução:</strong>Nossa equipe cuida de todos os preparativos e da execução do funeral,
-                        proporcionando um serviço profissional e compassivo.</li><br>
-                    <li><strong>Acompanhamento:</strong>Após o funeral, continuamos a oferecer suporte à família,
-                        ajudando com
-                        questões administrativas e oferecendo serviços de acompanhamento.</li>
-                </ol><br>
-            </div>
+                    <h4>Como Funciona:</h4>
+                    <ol>
+                        <li><strong>Consulta Inicial:</strong> Assim que a família entra em contato conosco, agendamos
+                            uma
+                            consulta inicial para entender suas necessidades e preferências. Essa consulta pode ser
+                            realizada
+                            presencialmente, por telefone ou online, conforme a conveniência da família.
+                        </li>
+                        <li><strong>Planejamento Detalhado:</strong> Trabalhamos em conjunto com a família para planejar
+                            todos os aspectos do funeral, desde a escolha do tipo de sepultamento (sepultura, jazigo ou
+                            cremação) até a organização do velório e da cerimônia de despedida. Respeitamos as tradições
+                            culturais e religiosas de cada família, garantindo que todos os detalhes sejam
+                            personalizados.
+                        </li>
 
-            <div id="serviçodeatendimento">
-                <h3>Serviço de Atendimento Personalizado</h3><br>
-                Na Funerária Luz do Caminho, oferecemos um <strong>Serviço de Atendimento Personalizado</strong> para
-                garantir
-                que cada detalhe do funeral seja tratado com o máximo cuidado e respeito, de acordo com as necessidades
-                e
-                desejos específicos de cada família. <br>
-
-                <h4>Como Funciona:</h4>
-                <ol>
-                    <li><strong>Consulta Inicial:</strong> Assim que a família entra em contato conosco, agendamos uma
-                        consulta inicial para entender suas necessidades e preferências. Essa consulta pode ser
-                        realizada
-                        presencialmente, por telefone ou online, conforme a conveniência da família.
-                    </li>
-                    <li><strong>Planejamento Detalhado:</strong> Trabalhamos em conjunto com a família para planejar
-                        todos os aspectos do funeral, desde a escolha do tipo de sepultamento (sepultura, jazigo ou
-                        cremação) até a organização do velório e da cerimônia de despedida. Respeitamos as tradições
-                        culturais e religiosas de cada família, garantindo que todos os detalhes sejam personalizados.
-                    </li>
-
-                    <li><strong>Coordenação de Serviços:</strong> Nossa equipe coordena todos os serviços necessários,
-                        incluindo a preparação do corpo, a decoração do local do velório, a contratação de músicos ou
-                        oradores, e a organização de transporte para os familiares e amigos.</li>
-                    <li><strong>Acompanhamento Contínuo:</strong>
-                        Durante todo o processo, oferecemos suporte contínuo família, respondendo a quaisquer dúvidas e
-                        garantindo que tudo ocorra conforme planejado. Estamos
-                        disponíveis 24 horas por dia para prestar assistência imediata.
-                    </li>
-                    <li><strong>Suporte Pós-Funeral:</strong> Após a cerimônia, continuamos a oferecer suporte à
-                        família,
-                        ajudando com questões administrativas e oferecendo serviços de acompanhamento, como apoio
-                        psicológico e assistência na obtenção de documentos.
-                    </li>
-                </ol><br>
-                <h4>Benefícios do Serviço de Atendimento Personalizado:</h4>
-                <ul>
-                    <li><strong>Tranquilidade:</strong> A família pode se concentrar em prestar homenagens ao ente
-                        querido,enquanto cuidamos de todos os detalhes.</li>
-                    <li><strong> Respeito e Dignidade:</strong>Garantimos que cada aspecto do funeral seja tratado com o
-                        máximo respeito e dignidade.</li>
-                    <li><strong>Flexibilidade:</strong> Adaptamos nossos serviços às necessidades específicas de cada
-                        família, oferecendo soluções personalizadas.</li>
-                    <li><strong>Suporte Contínuo:</strong> Estamos disponíveis 24 horas por dia, 7 dias por semana, para
-                        oferecer suporte imediato e contínuo.</li>
-                </ul><br>
-                Na Funerária Luz do Caminho, nosso objetivo é proporcionar um serviço compassivo e profissional,
-                ajudando as
-                famílias a honrar a memória de seus entes queridos de maneira digna e serena. Se precisar de mais
-                informações ou
-                de assistência, não hesite em entrar em contato conosco. Estamos sempre prontos para ajudar.
-            </div>
+                        <li><strong>Coordenação de Serviços:</strong> Nossa equipe coordena todos os serviços
+                            necessários,
+                            incluindo a preparação do corpo, a decoração do local do velório, a contratação de músicos
+                            ou
+                            oradores, e a organização de transporte para os familiares e amigos.</li>
+                        <li><strong>Acompanhamento Contínuo:</strong>
+                            Durante todo o processo, oferecemos suporte contínuo família, respondendo a quaisquer
+                            dúvidas e
+                            garantindo que tudo ocorra conforme planejado. Estamos
+                            disponíveis 24 horas por dia para prestar assistência imediata.
+                        </li>
+                        <li><strong>Suporte Pós-Funeral:</strong> Após a cerimônia, continuamos a oferecer suporte à
+                            família,
+                            ajudando com questões administrativas e oferecendo serviços de acompanhamento, como apoio
+                            psicológico e assistência na obtenção de documentos.
+                        </li>
+                    </ol><br>
+                    <h4>Benefícios do Serviço de Atendimento Personalizado:</h4>
+                    <ul>
+                        <li><strong>Tranquilidade:</strong> A família pode se concentrar em prestar homenagens ao ente
+                            querido,enquanto cuidamos de todos os detalhes.</li>
+                        <li><strong> Respeito e Dignidade:</strong>Garantimos que cada aspecto do funeral seja tratado
+                            com o
+                            máximo respeito e dignidade.</li>
+                        <li><strong>Flexibilidade:</strong> Adaptamos nossos serviços às necessidades específicas de
+                            cada
+                            família, oferecendo soluções personalizadas.</li>
+                        <li><strong>Suporte Contínuo:</strong> Estamos disponíveis 24 horas por dia, 7 dias por semana,
+                            para
+                            oferecer suporte imediato e contínuo.</li>
+                    </ul><br>
+                    Na Funerária Luz do Caminho, nosso objetivo é proporcionar um serviço compassivo e profissional,
+                    ajudando as
+                    famílias a honrar a memória de seus entes queridos de maneira digna e serena. Se precisar de mais
+                    informações ou
+                    de assistência, não hesite em entrar em contato conosco. Estamos sempre prontos para ajudar.
+                </div>
 
         </main><br><br>
 
